# recipes

./: .gitignore  .markdownlint.json  404.html  AGENTS.md  Makefile  index.html  pyproject.toml  sitemap.xml
.github/workflows/: mkdocs-deploy.yml
assets/: extra.css
mkdocs-site/: mkdocs.yml
mkdocs-site/docs/: index.md
mkdocs-site/docs/recipes/: frozen-triple-berry-smoothie.md  garlic-sauteed-red-rice.md  index.md
recipes/: index.html
recipes/frozen-triple-berry-smoothie/: index.html
recipes/garlic-sauteed-red-rice/: index.html
search/: search_index.json
