[project]
name = "recipes"
version = "0.1.0"
description = "A small collection of recipes"
dependencies = [
    "mkdocs>=1.6",
    "mkdocs-material>=9.5",
    "pymdown-extensions>=10.9",
]
requires-python = "==3.13.*"
license = "MIT"
authors = [
  {name = "behealthy92", email = "behealthy92@example.com"},
]

[project.readme]
file = "README.md"
content-type = "text/markdown"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"